--- a/WebRoot/styles/style.css
+++ b/WebRoot/styles/style.css
@@ -624,3 +624,8 @@ text-align:center;
 color:#666666;
 padding:10px 0 0 60px;
 }
+.detailDiv{
+	float: left;
+    margin-top: 20px;
+    text-align: left;
+}
