--- a/WebRoot/styles/style.css
+++ b/WebRoot/styles/style.css
@@ -571,6 +571,7 @@ border:1px #DFDFDF solid;
 float:left;
 }
 textarea.contact_textarea{
+padding: 10px 0px 10px 0px;
 width:253px;
 height:50px;
 font-family:Arial, Helvetica, sans-serif;
